k8s/cluster-apps/rutorrent/custom.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rutorrent-ingress
spec:
  ingressClassName: nginx
  rules:
    - host: rutorrent.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rutorrent
                port:
                  name: http
---
apiVersion: v1
kind: Service
metadata:
  name: rutorrent
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: rutorrent
spec:
  selector:
    app: rutorrent
  type: LoadBalancer
  loadBalancerIP: 192.168.1.252
  ports:
    - name: http
      port: 8080
      targetPort: 8080
      protocol: TCP
    - name: scgi
      port: 8000
      targetPort: 8000
      protocol: TCP
    - name: torrent-tcp
      port: 51413
      targetPort: 51413
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: rutorrent-upd
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: rutorrent
spec:
  selector:
    app: rutorrent
  type: LoadBalancer
  loadBalancerIP: 192.168.1.252
  ports:
    - name: torrent-udp
      port: 6881
      targetPort: 6881
      protocol: UDP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rutorrent
  namespace: default
  labels:
    app: rutorrent
spec:
  selector:
    matchLabels:
      app: rutorrent
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rutorrent
    spec:
      containers:
        - name: rutorrent
          image: ghcr.io/crazy-max/rtorrent-rutorrent:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "1Gi"
              cpu: "500m" 
            limits:
              memory: "1Gi"
              cpu: "4"
          ports:
            # RUTORRENT_PORT
            - containerPort: 8080
            # XMLRPC_PORT
            - containerPort: 8000
            # RT_INC_PORT
            - containerPort: 51413
            # DHT
            - containerPort: 6881
          volumeMounts:
            - name: downloads
              mountPath: /data/
              subPath: config/rtorrent-config
            - name: downloads
              mountPath: /downloads/
      volumes:
        - name: downloads
          hostPath:
            path: /downloads
            type: DirectoryOrCreate
      restartPolicy: Always
