k8s/cluster-apps/rutorrent/rutorrent.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: rutorrent-ingress
spec:
  rules:
    - host: rutorrent.k8s.javydekoning.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: rutorrent
                port:
                  number: 80
---
apiVersion: v1
kind: Service
metadata:
  name: rutorrent
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: rutorrent
spec:
  selector:
    app: rutorrent
  type: LoadBalancer
  loadBalancerIP: 192.168.1.252
  ports:
    - name: http
      port: 80
      targetPort: 80
      protocol: TCP
    - name: scgi
      port: 5000
      targetPort: 5000
      protocol: TCP
    - name: torrent-tcp
      port: 51413
      targetPort: 51413
      protocol: TCP
---
apiVersion: v1
kind: Service
metadata:
  name: rutorrent-upd
  namespace: default
  annotations:
    metallb.universe.tf/allow-shared-ip: rutorrent
spec:
  selector:
    app: rutorrent
  type: LoadBalancer
  loadBalancerIP: 192.168.1.252
  ports:
    - name: torrent-udp
      port: 6881
      targetPort: 6881
      protocol: UDP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rutorrent
  namespace: default
  labels:
    app: rutorrent
spec:
  selector:
    matchLabels:
      app: rutorrent
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: rutorrent
    spec:
      containers:
        - name: rutorrent
          image: ghcr.io/linuxserver/rutorrent
          ports:
            - containerPort: 80 # interface
            - containerPort: 5000 # scgi
            - containerPort: 51413
            - containerPort: 6881
          volumeMounts:
            - name: downloads
              mountPath: /config/
              subPath: config
            - name: downloads
              mountPath: /downloads/
      volumes:
        - name: downloads
          hostPath:
            path: /downloads
            type: DirectoryOrCreate
      restartPolicy: Always
      dnsPolicy: None
      dnsConfig:
        nameservers:
          - 1.1.1.1
